perf: reduce deployment targets endpoing response size to reduce memory usage
